# levai

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/api/: .env  Dockerfile  __init__.py  main.py  pyproject.toml  test.py
src/api/app/: __init__.py
src/api/app/constants/: env.py
src/api/app/schemas/: __init__.py  ollama.py
src/api/app/schemas/settings/: fields.py
src/api/app/settings/: env.py
src/api/app/utils/: requests.py
src/api/app/utils/ollama/: __init__.py  text.py
src/backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
src/backend/app/schemas/: ollama.py
src/database/: Dockerfile
src/frontend/: Dockerfile  index.html  package-lock.json  package.json
src/frontend/app/: App.tsx
src/schemas/: base.py  ollama.py
src/server/: Dockerfile  nginx.conf
