[project]
name = "levai"
version = "0.1.0"
description = "The LevAI project is about creating an AI to help you with software development, with a powerful senior developer helping you at every step."
authors = [
    {name = "Mauricio Benjamin",email = "mauriciobenjamin700@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
