[project]
name = "levai-backend"
version = "0.1.0"
description = "The LevAI project is about creating an AI to help you with software development, with a powerful senior developer helping you at every step."
authors = [
    {name = "Mauricio Benjamin",email = "mauriciobenjamin700@gmail.com"}
]
license = "MIT"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
